<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/heroImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/hero_content_description"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/detailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_name"
                android:padding="5dp"

                app:layout_constraintTop_toBottomOf="@id/heroImage"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/detailComicCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_comics_available"
                android:padding="5dp"

                app:layout_constraintTop_toBottomOf="@id/detailName"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/detailSeriesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_series_available"
                android:padding="5dp"

                app:layout_constraintTop_toBottomOf="@id/detailComicCount"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/detailStoriesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_stories_available"
                android:padding="5dp"

                app:layout_constraintTop_toBottomOf="@id/detailSeriesCount"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/detailEventsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_events_available"
                android:padding="5dp"

                app:layout_constraintTop_toBottomOf="@id/detailStoriesCount"
                app:layout_constraintLeft_toLeftOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>