<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/white"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/heroImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:contentDescription="@string/hero_content_description"

            app:srcCompat="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/heroName"
            app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
            android:id="@+id/heroName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hero_name"

            app:layout_constraintBottom_toTopOf="@id/comicsAvailable"
            app:layout_constraintLeft_toRightOf="@id/heroImage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
            android:id="@+id/comicsAvailable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hero_comics_available"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/heroImage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heroName"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>